--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,14 +1,14 @@
 /**
 * Template Name: FlexStart
-* Template URL: https://bootstrapmade.com/flexstart-bootstrap-startup-template/
+
 * Updated: Nov 01 2024 with Bootstrap v5.3.3
 * Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
+* License: /license/
 */
 
 /*--------------------------------------------------------------
 # Font & Color Variables
-# Help: https://bootstrapmade.com/color-system/
+# Help: /color-system/
 --------------------------------------------------------------*/
 /* Fonts */
 :root {
