logo flages changes done

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -163,7 +163,7 @@ h6 {
 }
 
 .header .logo #black-logo{
- display: none; /* Hide black logo initially */
+ display: visible; /* Hide black logo initially */
 }
 
 .header .logo img {
